[package]
name = "trest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
jzon = "0.12.5"
ureq = { version = "*", default-features = false }
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"